2017-07-16 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* New Calculator::calculate() variant that calculates a parsed expression

2017-07-15 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix formatting of (x^2)/(10y) (was (1*x^2)/(10y))
	* STRUCT_ABORTED MathStructure type

2017-07-10 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Rename Calculator::printMathStructureTimeOut() to Calculator::print()

2017-07-09 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Do not convert temperature units if other units are converted, when converting to optimal or base units
	* More efficient conversion to base units that solves issues with temperature units in conversion to base and optimal units
	* Lower the maximum exponent to avoid slow division

2017-07-06 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Prefer positive exponents over negative, unless the result includes a another unit with positive exponent (fixes Hz)

2017-07-02 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Do not convert to composite units in mixed units conversion
	* Fix mixed units forced by default in separate unit conversion

2017-07-01 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Update elements data set
	* Do not try to calculate zeta for values larger than 100 000
	* Controlled termination of plot()

2017-06-30 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix x^-y (=x^(-y))

2017-06-28 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Do not try to calculate extreme exponentiations

2017-06-27 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Controlled calculation termination handling points

2017-06-26 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Polynomial gcd fixes
	* Do not crash when factorizing 1
	* Use clock_gettime() instead of gettimeofday() if avaiable

2017-06-17 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Remove "none" and "non-matrix" assumptions from qalc and when loading definitions from previous versions (<= 0.9.12)